--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,23 +1,44 @@
+<!--
+  ~ Copyright (c) 2015 Joaquim Ley - www.joaquimley.com
+  ~ All rights reserved.
+  ~
+  ~ Redistribution, modification or use of source and binary forms are NOT allowed
+  ~ without permission. The name of Joaquim Ley, or joaquimley.com may not be used
+  ~ to endorse products derived without previous authorization.
+  ~ THIS SOFTWARE IS PROVIDED 'AS IS' AND WITHOUT ANY EXPRESS OR
+  ~ IMPLIED WARRANTIES, INCLUDING, WITHOUT LIMITATION, THE IMPLIED
+  ~ WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE.
+  -->
+
 <resources>
 
     <!-- Common -->
     <string name="app_name">By Invitation Only</string>
     <string name="action_settings">Settings</string>
     <string name="firebase_url">https://b-i-o.firebaseio.com/</string>
-
-    <!--Settings-->
+    <string name="text_contact">Contact</string>
+    <string name="text_keynote">Keynote</string>
+    <string name="text_favorite">Favorite</string>
+    <!-- Errors -->
+    <string name="error_no_internet">No network connection</string>
+    <string name="error_no_dialer">Device has no dialing capabilities</string>
+    <!-- Settings -->
     <string name="prefs_key_name">Contact Name</string>
     <string name="prefs_key_email">Contact Email</string>
     <string name="prefs_title_name">Nome</string>
     <string name="prefs_title_email">Email</string>
     <string name="prefs_summary_name">@string/prefs_title_name</string>
     <string name="prefs_summary_email">@string/prefs_title_email</string>
-    <string name="error_no_internet">No network connection</string>
+    <!-- Menu -->
     <string name="action_register">Register</string>
+    <string name="action_checkin">Check-In</string>
+    <string name="title_keynote">@string/text_keynote</string>
+    <string name="title_favorite">@string/text_favorite</string>
+    <!-- Main Activity -->
     <string name="current_conferences">Current Conferences</string>
+    <!-- Participant List -->
     <string name="user_invisible">You are now INVISIBLE to other participants</string>
     <string name="user_visible">You are now VISIBLE to other participants</string>
-    <string name="action_checkin">Check-In</string>
-    <string name="text_contact">Contact</string>
-    <string name="error_no_dialer">Device has no dialing capabilities</string>
+    <string name="app_name_acronym">BIO</string>
+
 </resources>
