--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,14 +14,22 @@
 
     <!-- Common -->
     <string name="app_name">By Invitation Only</string>
+    <string name="app_name_acronym">BIO</string>
+    <string name="file_conference_data">ConferenceData.csv</string>
+    <string name="file_sessions_data">SessionsData.csv</string>
+    <string name="csv_split">\\|</string>
     <string name="action_settings">Settings</string>
-    <string name="firebase_url">https://b-i-o.firebaseio.com/</string>
-    <string name="text_contact">Contact</string>
-    <string name="text_keynote">Keynote</string>
-    <string name="text_favorite">Favorite</string>
     <!-- Errors -->
     <string name="error_no_internet">No network connection</string>
-    <string name="error_no_dialer">Device has no dialing capabilities</string>
+    <string name="error_no_dialer">Device has no telephony capabilities</string>
+    <!-- Firebase -->
+    <string name="firebase_url">https://b-i-o.firebaseio.com/</string>
+    <string name="firebase_child_contacts">contacts</string>
+    <string name="firebase_child_sessions">sessions</string>
+    <!-- Main Activity -->
+    <string name="text_contact">Contact</string>
+    <string name="text_session">Session</string>
+    <string name="text_favorite">Favorite</string>
     <!-- Settings -->
     <string name="prefs_key_name">Contact Name</string>
     <string name="prefs_key_email">Contact Email</string>
@@ -31,16 +39,13 @@
     <string name="prefs_summary_email">@string/prefs_title_email</string>
     <!-- Menu -->
     <string name="action_register">Register</string>
-    <string name="action_checkin">Check-In</string>
-    <string name="title_keynote">@string/text_keynote</string>
+    <string name="action_check_in">Check-In</string>
+    <string name="title_keynote">@string/text_session</string>
     <string name="title_favorite">@string/text_favorite</string>
     <!-- Main Activity -->
     <string name="current_conferences">Current Conferences</string>
     <!-- Participant List -->
     <string name="user_invisible">You are now INVISIBLE to other participants</string>
     <string name="user_visible">You are now VISIBLE to other participants</string>
-    <string name="app_name_acronym">BIO</string>
-    <string name="file_conference_data">ConferenceData.csv</string>
-    <string name="file_sessions_data">SessionsData.csv</string>
 
 </resources>
