--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,9 +19,21 @@
     <string name="file_sessions_data">SessionsData.csv</string>
     <string name="csv_split">\\|</string>
     <string name="action_settings">Settings</string>
+    <!-- Shared Preferences Keys -->
+    <string name="shared_pref_user_details_email">user_details_email</string>
+    <string name="shared_pref_user_details_description">user_details_description</string>
+    <string name="shared_pref_user_details_name">user_details_name</string>
+    <string name="shared_pref_user_details_photo_url">user_details_photo_url</string>
+    <string name="shared_pref_user_details_availability">user_details_availability</string>
+    <string name="shared_pref_user_details_id">user_details_id</string>
     <!-- Errors -->
     <string name="error_no_internet">No network connection</string>
     <string name="error_no_dialer">Device has no telephony capabilities</string>
+    <string name="error_user_null">Current user is null</string>
+    <string name="error_user_edit_available">You must be invisible to edit your information</string>
+    <string name="error_user_must_be_visible">You must be VISIBLE</string>
+    <string name="error_contacting_server">"Error contacting server "</string>
+    <string name="error_no_user_details">Please create your user profile first</string>
     <!-- Firebase -->
     <string name="firebase_url">https://b-i-o.firebaseio.com/</string>
     <string name="firebase_child_users">users</string>
@@ -47,22 +59,18 @@
     <string name="text_up_coming_sessions">Upcoming sessions</string>
     <string name="user_invisible">You are INVISIBLE to other participants</string>
     <string name="user_visible">You are VISIBLE to other participants</string>
-    <string name="error_user_must_be_visible">You must be VISIBLE</string>
     <!-- Participant List -->
-    <string name="participants_list">Participants List</string>
+    <string name="text_participants_list">Participants List</string>
+    <string name="title_activity_participants_list">@string/text_participants_list</string>
     <!-- Edit User Details Activity -->
     <string name="title_activity_edit_user_details">Edit Your Details</string>
-    <string name="text_name">Name:</string>
-    <string name="email">Email:</string>
-    <string name="description">Description</string>
+    <string name="text_name">Name* :</string>
+    <string name="email">Email* :</string>
+    <string name="description">Description* :</string>
+    <string name="text_edit_details">Edit your details:</string>
+    <string name="photo_url">Photo Url:</string>
     <string name="text_save">Save</string>
     <string name="text_cancel">Cancel</string>
-    <string name="title_activity_participants_list">Participants List</string>
 
-    <string name="hello_world">Hello world!</string>
-    <string name="text_participants_list">Participants List</string>
-    <string name="text_edit_details">Edit your public details:</string>
-    <string name="error_user_null">Current user is null</string>
-    <string name="error_user_edit_available">You must be invisible to edit your information</string>
 
 </resources>
