--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,7 +23,8 @@
     <string name="shared_pref_user_details_email">user_details_email</string>
     <string name="shared_pref_user_details_description">user_details_description</string>
     <string name="shared_pref_user_details_name">user_details_name</string>
-    <string name="shared_pref_user_details_photo_url">user_details_photo_url</string>
+    <string name="shared_pref_user_details_photo_base64">user_details_photo_url</string>
+    <string name="shared_pref_user_details_photo_uri">user_details_image_uri</string>
     <string name="shared_pref_user_details_availability">user_details_availability</string>
     <string name="shared_pref_user_details_id">user_details_id</string>
     <!-- Errors -->
@@ -31,9 +32,10 @@
     <string name="error_no_dialer">Device has no telephony capabilities</string>
     <string name="error_user_null">Current user is null</string>
     <string name="error_user_edit_available">You must be invisible to edit your information</string>
-    <string name="error_user_must_be_visible">You must be VISIBLE</string>
-    <string name="error_contacting_server">"Error contacting server "</string>
+    <string name="error_user_must_check_in">You must check-in first</string>
+    <string name="error_contacting_server">Error contacting server </string>
     <string name="error_no_user_details">Please create your user profile first</string>
+    <string name="error_fill_required_fields">Please fill all required fields</string>
     <!-- Firebase -->
     <string name="firebase_url">https://b-i-o.firebaseio.com/</string>
     <string name="firebase_child_users">users</string>
@@ -42,13 +44,6 @@
     <string name="text_contact">Contact</string>
     <string name="text_session">Session</string>
     <string name="text_favorite">Favorite</string>
-    <!-- Settings -->
-    <string name="prefs_key_name">Contact Name</string>
-    <string name="prefs_key_email">Contact Email</string>
-    <string name="prefs_title_name">Nome</string>
-    <string name="prefs_title_email">Email</string>
-    <string name="prefs_summary_name">@string/prefs_title_name</string>
-    <string name="prefs_summary_email">@string/prefs_title_email</string>
     <!-- Menu -->
     <string name="action_register">Register</string>
     <string name="action_check_in">Check-In</string>
@@ -71,6 +66,7 @@
     <string name="photo_url">Photo Url:</string>
     <string name="text_save">Save</string>
     <string name="text_cancel">Cancel</string>
+    <string name="text_user_profile_picture">User profile picture</string>
 
 
 </resources>
