participants list activity further implementation, CustomAdapters memory leak final fix

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,14 +12,14 @@
 
 <resources>
 
-    <!-- Common -->
+    <!-- Common/System -->
     <string name="app_name">By Invitation Only</string>
     <string name="app_name_acronym">BIO</string>
     <string name="file_conference_data">ConferenceData.csv</string>
     <string name="file_sessions_data">SessionsData.csv</string>
     <string name="csv_split">\\|</string>
     <string name="action_settings">Settings</string>
-    <!-- Shared Preferences Keys -->
+    <!-- SharedPreferences Keys -->
     <string name="shared_pref_user_details_email">user_details_email</string>
     <string name="shared_pref_user_details_description">user_details_description</string>
     <string name="shared_pref_user_details_name">user_details_name</string>
@@ -27,29 +27,29 @@
     <string name="shared_pref_user_details_photo_uri">user_details_image_uri</string>
     <string name="shared_pref_user_details_availability">user_details_availability</string>
     <string name="shared_pref_user_details_id">user_details_id</string>
+    <!-- Firebase -->
+    <string name="firebase_url">https://b-i-o.firebaseio.com/</string>
+    <string name="firebase_child_users">users</string>
+    <string name="firebase_child_sessions">sessions</string>
     <!-- Errors -->
     <string name="error_no_internet">No network connection</string>
     <string name="error_no_dialer">Device has no telephony capabilities</string>
     <string name="error_user_null">Current user is null</string>
     <string name="error_user_edit_available">You must be invisible to edit your information</string>
-    <string name="error_user_must_check_in">You must check-in first</string>
+    <string name="error_user_must_check_in">You must checked-in</string>
+    <string name="error_create_user_profile_first">Please create your profile first</string>
     <string name="error_contacting_server">Error contacting server </string>
     <string name="error_no_user_details">Please create your user profile first</string>
     <string name="error_fill_required_fields">Please fill all required fields</string>
-    <!-- Firebase -->
-    <string name="firebase_url">https://b-i-o.firebaseio.com/</string>
-    <string name="firebase_child_users">users</string>
-    <string name="firebase_child_sessions">sessions</string>
-    <!-- Main Activity -->
-    <string name="text_contact">Contact</string>
-    <string name="text_session">Session</string>
-    <string name="text_favorite">Favorite</string>
     <!-- Menu -->
     <string name="action_register">Register</string>
     <string name="action_check_in">Check-In</string>
     <string name="title_keynote">@string/text_session</string>
     <string name="title_favorite">@string/text_favorite</string>
     <!-- Main Activity -->
+    <string name="text_contact">Contact</string>
+    <string name="text_session">Session</string>
+    <string name="text_favorite">Favorite</string>
     <string name="text_welcome_message">Welcome</string>
     <string name="text_up_coming_sessions">Upcoming sessions</string>
     <string name="user_invisible">You are INVISIBLE to other participants</string>
@@ -58,16 +58,14 @@
     <string name="text_participants_list">Participants List</string>
     <string name="title_activity_participants_list">@string/text_participants_list</string>
     <!-- Edit User Details Activity -->
-    <string name="title_activity_edit_user_details">Edit Your Details</string>
+    <string name="title_activity_edit_user_details">@string/text_edit_details</string>
+    <string name="text_edit_details">Edit your details:</string>
     <string name="text_name">Name* :</string>
     <string name="email">Email* :</string>
     <string name="description">Description* :</string>
-    <string name="text_edit_details">Edit your details:</string>
     <string name="photo_url">Photo Url:</string>
+    <string name="text_user_profile_picture">User profile picture</string>
     <string name="text_save">Save</string>
     <string name="text_cancel">Cancel</string>
-    <string name="text_user_profile_picture">User profile picture</string>
-    <string name="error_create_user_profile_first">Please create your profile first</string>
-
 
 </resources>
