--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,8 @@
     <string name="file_sessions_data">SessionsData.csv</string>
     <string name="csv_split">\\|</string>
     <string name="action_settings">Settings</string>
+    <string name="user_visible">You are VISIBLE to other participants</string>
+    <string name="user_invisible">You are INVISIBLE to other participants</string>
     <!-- SharedPreferences Keys -->
     <string name="shared_pref_user_details_email">user_details_email</string>
     <string name="shared_pref_user_details_description">user_details_description</string>
@@ -41,30 +43,37 @@
     <string name="error_contacting_server">Error contacting server </string>
     <string name="error_no_user_details">Please create your user profile first</string>
     <string name="error_fill_required_fields">Please fill all required (*) fields</string>
-    <!-- Menu -->
-    <string name="action_register">Register</string>
-    <string name="action_check_in">Check-In</string>
-    <string name="title_keynote">@string/text_session</string>
-    <string name="title_favorite">@string/text_favorite</string>
+    <!-- Navigation Drawer -->
+    <string name="drawer_open">Drawer open</string>
+    <string name="drawer_close">Drawer closed</string>
+    <string name="text_home">Home</string>
+    <string name="text_sessions">Sessions</string>
+    <string name="text_bookmark">Bookmarks</string>
+    <string name="title_sessions">@string/text_sessions</string>
+    <string name="title_bookmark">@string/text_bookmark</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
     <!-- Main Activity -->
-    <string name="text_contact">Contact</string>
-    <string name="text_session">Session</string>
-    <string name="text_favorite">Favorite</string>
     <string name="text_welcome_to">Welcome to</string>
     <string name="text_up_coming_sessions">Upcoming sessions</string>
-    <string name="user_invisible">You are INVISIBLE to other participants</string>
-    <string name="user_visible">You are VISIBLE to other participants</string>
     <!-- Participant List -->
-    <string name="text_participants_list">Participants List</string>
     <string name="title_activity_participants_list">@string/text_participants_list</string>
+    <string name="text_participants_list">Participants</string>
     <!-- Edit User Details -->
     <string name="title_activity_edit_user_details">Edit your details</string>
     <string name="text_name">Name* :</string>
     <string name="email">Email* :</string>
     <string name="description">Description* :</string>
     <string name="photo_url">Photo Url:</string>
-    <string name="text_user_profile_picture">User profile picture</string>
+    <string name="user_profile_picture">User profile picture</string>
     <string name="text_save">Save</string>
     <string name="text_cancel">Cancel</string>
+    <string name="title_activity_bookmarked_list">Bookmarked List</string>
+    <string name="title_activity_main_activity_test">Welcome</string>
+
+
+
+    <string name="action_example">Example action</string>
+    <string name="text_profile_updated">Profile updated</string>
 
 </resources>
