--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,13 +23,14 @@
 
     <!-- Common/System -->
     <string name="app_name">By Invitation Only</string>
-    <string name="app_name_acronym">BIO</string>
+    <string name="app_acronym">BIO</string>
     <string name="file_conference_data">ConferenceData.csv</string>
     <string name="file_sessions_data">SessionsData.csv</string>
     <string name="csv_split">\\|</string>
     <string name="action_settings">Settings</string>
     <string name="user_visible">You are VISIBLE to other participants</string>
     <string name="user_invisible">You are INVISIBLE to other participants</string>
+    <string name="text_profile_updated">Profile updated</string>
     <!-- SharedPreferences Keys -->
     <string name="shared_pref_user_details_email">user_details_email</string>
     <string name="shared_pref_user_details_description">user_details_description</string>
@@ -38,10 +39,6 @@
     <string name="shared_pref_user_details_photo_uri">user_details_image_uri</string>
     <string name="shared_pref_user_details_availability">user_details_availability</string>
     <string name="shared_pref_user_details_id">user_details_id</string>
-    <!-- Firebase -->
-    <string name="firebase_url">https://b-i-o.firebaseio.com/</string>
-    <string name="firebase_child_users">users</string>
-    <string name="firebase_child_sessions">sessions</string>
     <!-- Errors -->
     <string name="error_no_internet">No network connection</string>
     <string name="error_no_dialer">Device has no telephony capabilities</string>
@@ -52,16 +49,16 @@
     <string name="error_contacting_server">Error contacting server </string>
     <string name="error_no_user_details">Please create your user profile first</string>
     <string name="error_fill_required_fields">Please fill all required (*) fields</string>
+    <!-- Firebase -->
+    <string name="firebase_url">https://b-i-o.firebaseio.com/</string>
+    <string name="firebase_child_users">users</string>
+    <string name="firebase_child_sessions">sessions</string>
     <!-- Navigation Drawer -->
     <string name="drawer_open">Drawer open</string>
     <string name="drawer_close">Drawer closed</string>
     <string name="text_home">Home</string>
     <string name="text_sessions">Sessions</string>
     <string name="text_bookmark">Bookmarks</string>
-    <string name="title_sessions">@string/text_sessions</string>
-    <string name="title_bookmark">@string/text_bookmark</string>
-    <string name="navigation_drawer_open">Open navigation drawer</string>
-    <string name="navigation_drawer_close">Close navigation drawer</string>
     <!-- Main Activity -->
     <string name="text_welcome_to">Welcome to</string>
     <string name="text_up_coming_sessions">Upcoming sessions</string>
@@ -77,12 +74,7 @@
     <string name="user_profile_picture">User profile picture</string>
     <string name="text_save">Save</string>
     <string name="text_cancel">Cancel</string>
+    <!-- Bookmarked List Activity -->
     <string name="title_activity_bookmarked_list">Bookmarked List</string>
-    <string name="title_activity_main_activity_test">Welcome</string>
-
-
-
-    <string name="action_example">Example action</string>
-    <string name="text_profile_updated">Profile updated</string>
 
 </resources>
